@@ -1,16 +1,0 @@
-<project name="Gherkin" default="jar" basedir=".">
-  <target name="compile" description="Compile">
-    <mkdir dir="${basedir}/target/classes"/>
-    <javac srcdir="src" destdir="target/classes" debug="on"/>
-  </target>
-
-  <target name="jar" description="Jar" depends="compile">
-    <jar destfile="${basedir}/../lib/gherkin.jar">
-      <fileset dir="${basedir}/target/classes" />
-      <fileset dir="${basedir}/../lib" includes="gherkin/parser/*.txt" />
-      <manifest>
-        <attribute name="Main-Class" value="gherkin.Main" />
-      </manifest>
-    </jar>
-  </target>
-</project>
